--- a/package.json
+++ b/package.json
@@ -21,7 +21,15 @@
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.4.0",
     "react-navigation-header-buttons": "^4.0.2",
-    "react-navigation-stack": "^2.8.2"
+    "react-navigation-stack": "^2.8.2",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "expo-image-picker": "~8.3.0",
+    "expo-permissions": "~9.0.1",
+    "expo-camera": "~8.3.1",
+    "expo-file-system": "~9.0.1",
+    "expo-sqlite": "~8.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
